Adicionado bcList para listar os itens

--- a/angular4/package.json
+++ b/angular4/package.json
@@ -22,7 +22,7 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "admin-lte": "^2.3.11",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "4.0.0-beta",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "ng2-toastr": "^4.1.2",
